--- a/demo.yml
+++ b/demo.yml
@@ -1,5 +1,8 @@
 server:
   port: 8888
+spring:
+    application:
+        name: demo
   
 # Note that this configuration differs slightly from what is in chapter 14.
 # Whereas the GitHub org/user was "tacocloud" in the book, that name doesn't
