--- a/demo2.yml
+++ b/demo2.yml
@@ -1,15 +1,9 @@
 server:
-    port: 8888
+  port: 8092
 spring:
-    application:
-        name: demo2
-    cloud:
-        config:
-            server:
-                git:
-                    uri: https://github.com/xlgwr/config
-                    search-paths: config,myapp
+  application:
+    name: ingredient-service2
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost1:8761/eureka
+      defaultZone: http://localhost:8760/eureka,http://localhost1:8761/eureka,http://localhost:8762/eureka,http://localhost:8763/eureka
